Overflow hidden to ensure large conten't does not leak outside the cell.

--- a/src/sheet/_sheet.css
+++ b/src/sheet/_sheet.css
@@ -154,6 +154,7 @@
 }
 
 .sc-sheet td {
+  overflow: hidden;
   white-space: pre-wrap;
   overflow-wrap: break-word;
   border: 1px solid var(--sheet-cell-bordercolor);
